KSENROLL-7707 Fixed word break wrapping on free form text.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@51107 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-web/src/main/webapp/ks-enroll/css/krms.css
+++ b/ks-enroll-web/src/main/webapp/ks-enroll/css/krms.css
@@ -49,6 +49,8 @@
 
 .subruleElement {
     white-space: normal !important;
+    max-width: 600px;
+    word-wrap: break-word;
 }
 
 .compareElement {
@@ -80,6 +82,7 @@
 
 .krms-ruleViewSection {
     margin: 10px;
+    width: 800px;
 }
 
 .krms-agendaHeader {
